--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,3 +28,6 @@ jobs:
       run: |
         docker-compose -f docker-compose.yml up -d
       if: startsWith(github.event_name, 'push')
+
+    - name: List current folder
+      run : ls -la
